--- a/style.css
+++ b/style.css
@@ -117,3 +117,15 @@ footer {
   line-height: 1.3;
   font-weight: 400;
 }
+
+@font-face {
+  font-family: 'YogaWithLisa';
+  src: url('fonts/YogaWithLisa.woff2') format('woff2'),
+       url('fonts/YogaWithLisa.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+h1, h2, .brand {
+  font-family: 'YogaWithLisa', serif;
+}
